<resources>
    <string name="app_name">IntentsProj</string>
    <string name="txt_number1">Number 1</string>
    <string name="txt_number2">Number 2</string>
    <string name="btn_name">OK</string>
    <string name="txt_sum">Sum</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">x</string>
    <string name="btn_divide">/</string>
    <string name="btn_ok">OK</string>
    <string name="home_viewTxt">Calculator</string>
</resources>